--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /HW/Netbeans Projects/Butler_Lab2_Employee Class/build/
 /HW/Netbeans Projects/Butler_Java2_Lab2_Temperature Class/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab2_Temperature Class/build/
+/HW/Netbeans Projects/Butler_Java2_ScratchPaper/nbproject/private/
