--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /HW/Netbeans Projects/Butler_Java2_Lab2_Temperature Class/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab2_Temperature Class/build/
 /HW/Netbeans Projects/Butler_Java2_ScratchPaper/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab3_CarperCalculator/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab3_CarperCalculator/build/
+/HW/Netbeans Projects/Butler_Java2_Lab3_CarperCalculator/dist/
+/HW/Netbeans Projects/Butler_Java2_Lab3_CarpetCalculator/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab3_CarpetCalculator/build/
