--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab3_CarperCalculator/dist/
 /HW/Netbeans Projects/Butler_Java2_Lab3_CarpetCalculator/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab3_CarpetCalculator/build/
+/HW/Netbeans Projects/Butler_Java2_Lab3_PArkingTicketSimulator/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab3_PArkingTicketSimulator/build/
