Java2_Lab3_PasswordVerifier

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab3_CarpetCalculator/build/
 /HW/Netbeans Projects/Butler_Java2_Lab3_PArkingTicketSimulator/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab3_PArkingTicketSimulator/build/
+/HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/build/
