--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /HW/Netbeans Projects/Butler_Java2_Lab3_PArkingTicketSimulator/build/
 /HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/build/
+/HW/Netbeans Projects/Butler_Java2_Lab4_PasswordVerifier/nbproject/private/
