Butler_Java2_Lab4_SumOfDigits

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab3_PasswordVerifier/build/
 /HW/Netbeans Projects/Butler_Java2_Lab4_PasswordVerifier/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab4_SumofDigits/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab4_SumofDigits/build/
+/HW/Netbeans Projects/Butler_Java2_Lab4_PasswordVerifier/build/
