--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab4_SumofDigits/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab4_SumofDigits/build/
 /HW/Netbeans Projects/Butler_Java2_Lab4_PasswordVerifier/build/
+/HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/build/
