Java2_Lab5_AccountsDemo

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab4_PasswordVerifier/build/
 /HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/build/
+/HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/build/
