Changes to Scratch paper (9/23/18)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/build/
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/build/
+/HW/Netbeans Projects/Butler_Java2__ScratchPaper/nbproject/private/
