Java2_Lab6_TestScores

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/build/
 /HW/Netbeans Projects/Butler_Java2__ScratchPaper/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab6_TestScores/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab6_TestScores/build/
+/HW/Netbeans Projects/Butler_Java2_Lab6_TestScoresCustomException/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab6_TestScoresCustomException/build/
