--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab6_TestScores/build/
 /HW/Netbeans Projects/Butler_Java2_Lab6_TestScoresCustomException/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab6_TestScoresCustomException/build/
+/HW/Netbeans Projects/Butler_Java2_Lab6_RetailItemException/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab6_RetailItemException/build/
