Butler_Java2_Lab7_FileArray & UpperCase

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /HW/Netbeans Projects/Butler_Java2_Lab5_CourseGrades/build/
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab5_BankandSavingsAccountDemo/build/
+/HW/Netbeans Projects/Butler_Java2_Lab7_UpperCase/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab7_UpperCase/build/
+/HW/Netbeans Projects/Butler_Java2_Lab7_FileArray/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab7_FileArray/build/
