--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab6_TestScoresCustomException/build/
 /HW/Netbeans Projects/Butler_Java2_Lab6_RetailItemException/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab6_RetailItemException/build/
+/HW/Netbeans Projects/Butler_Java2_Lab8_TravelExpensesGUI/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab8_TravelExpensesGUI/build/
