Java Lab10 ColorChanging

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@
 /HW/Netbeans Projects/Butler_Java2_Lab10_Checkerboard/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab10_Checkerboard/build/
 /HW/Netbeans Projects/Butler_Java2_Lab10_Checkerboard/dist/
+/HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/build/
+/HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/dist/
