--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/build/
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/dist/
+/HW/Netbeans Projects/Butler_Java2_Lab11_MyListClass/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_Lab11_MyListClass/build/
