Butler_Java2_FinalProject Iteration #1

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/nbproject/private/
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/build/
 /HW/Netbeans Projects/Butler_Java2_Lab10_ColorChangingRadioButtons/dist/
+/HW/Netbeans Projects/Butler_Java2_FinalProject/nbproject/private/
+/HW/Netbeans Projects/Butler_Java2_FinalProject/dist/
+/HW/Netbeans Projects/Butler_Java2_FinalProject/build/
