Butler_Java3_Lab2

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@
 /HW/Netbeans Projects/Butler_Java3_Lab1_AddressBook/nbproject/private/
 /HW/Netbeans Projects/Butler_Java3_Lab1_AddressBook/build/
 /HW/Netbeans Projects/Butler_Java3_Lab1_AddressBook/dist/
+/HW/Netbeans Projects/Butler_Java3_Lab2/nbproject/private/
+/HW/Netbeans Projects/Butler_Java3_Lab2/build/
