Java3_lab2_Rename

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@
 /HW/Netbeans Projects/Butler_Java3_Lab1_AddressBook/dist/
 /HW/Netbeans Projects/Butler_Java3_Lab2/nbproject/private/
 /HW/Netbeans Projects/Butler_Java3_Lab2/build/
+/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/nbproject/private/
+/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/build/
