--- a/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/build.xml
+++ b/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Butler_Java3_Lab2" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Butler_Java3_Lab2.</description>
+<project name="Butler_Java3_Lab2_PingPong" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Butler_Java3_Lab2_PingPong.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Butler_Java3_Lab2-impl.jar">
+        <target name="run" depends="Butler_Java3_Lab2_PingPong-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
