--- a/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/nbproject/project.properties
+++ b/HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Butler_Java3_Lab2.jar
+dist.jar=${dist.dir}/Butler_Java3_Lab2_PingPong.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
