--- a/GITHW/Netbeans Projects/Butler_Java3_Lab5_JDBC/Butler_Java3_Lab5_JDBC/nbproject/private/private.properties
+++ b/GITHW/Netbeans Projects/Butler_Java3_Lab5_JDBC/Butler_Java3_Lab5_JDBC/nbproject/private/private.properties
@@ -1,6 +1,11 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.commons-lang-2.6.jar=D:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=D:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\commons-logging-1.1.1.jar
+file.reference.hsqldb.jar=D:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\hsqldb.jar
+file.reference.jackcess-2.1.6.jar=D:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\jackcess-2.1.6.jar
+file.reference.ucanaccess-4.0.1.jar=D:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\ucanaccess-4.0.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\tfran\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Al\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
