--- a/GITHW/Netbeans Projects/Butler_Java3_Lab4_JDBC/Butler_Java3_Lab4_JDBC/nbproject/project.properties
+++ b/GITHW/Netbeans Projects/Butler_Java3_Lab4_JDBC/Butler_Java3_Lab4_JDBC/nbproject/project.properties
@@ -30,11 +30,11 @@ dist.jar=${dist.dir}/Butler_Java3_Lab4_JDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-lang-2.6.jar=C:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\commons-lang-2.6.jar
-file.reference.commons-logging-1.1.1.jar=C:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\commons-logging-1.1.1.jar
-file.reference.hsqldb.jar=C:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\hsqldb.jar
-file.reference.jackcess-2.1.6.jar=C:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\lib\\jackcess-2.1.6.jar
-file.reference.ucanaccess-4.0.1.jar=C:\\Downloads\\UCanAccess-4.0.1-bin\\UCanAccess-4.0.1-bin\\ucanaccess-4.0.1.jar
+file.reference.commons-lang-2.6.jar=../../../../../../../../Downloads/UCanAccess-4.0.1-bin/UCanAccess-4.0.1-bin/lib/commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=../../../../../../../../Downloads/UCanAccess-4.0.1-bin/UCanAccess-4.0.1-bin/lib/commons-logging-1.1.1.jar
+file.reference.hsqldb.jar=../../../../../../../../Downloads/UCanAccess-4.0.1-bin/UCanAccess-4.0.1-bin/lib/hsqldb.jar
+file.reference.jackcess-2.1.6.jar=../../../../../../../../Downloads/UCanAccess-4.0.1-bin/UCanAccess-4.0.1-bin/lib/jackcess-2.1.6.jar
+file.reference.ucanaccess-4.0.1.jar=../../../../../../../../Downloads/UCanAccess-4.0.1-bin/UCanAccess-4.0.1-bin/ucanaccess-4.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
