Butler_Java3_Lab6_TaxCalc

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@
 /HW/Netbeans Projects/Butler_Java3_Lab2/build/
 /HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/nbproject/private/
 /HW/Netbeans Projects/Butler_Java3_Lab2_PingPong/build/
+/GITHW/NETBEANS EE/TestApp/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_Lab6_TaxComputation/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_Lab6_TaxComputation/build/
+/GITHW/Netbeans Projects/Butler_Java3_Lab5_Internationalization/dist/
+/GITHW/Netbeans Projects/Butler_Java3_Lab5_Internationalization/build/
