Butler_Java3_Lab7_CalculateLoan

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@
 /GITHW/NETBEANS EE/Butler_Java3_Lab6_TaxComputation/build/
 /GITHW/Netbeans Projects/Butler_Java3_Lab5_Internationalization/dist/
 /GITHW/Netbeans Projects/Butler_Java3_Lab5_Internationalization/build/
+/GITHW/NETBEANS EE/Butler_Java3_Lab7_LoanCalculator/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_Lab7_LoanCalculator/build/
+/GITHW/NETBEANS EE/Butler_Java3_Lab7_CalculateLoan/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_Lab7_CalculateLoan/build/
