Butler_Java3_MidtermProject

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@
 /GITHW/NETBEANS EE/Butler_Java3_Lab7_LoanCalculator/build/
 /GITHW/NETBEANS EE/Butler_Java3_Lab7_CalculateLoan/nbproject/private/
 /GITHW/NETBEANS EE/Butler_Java3_Lab7_CalculateLoan/build/
+/GITHW/NETBEANS EE/Butler_Java3_MidtermProject/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_MidtermProject/build/
+/GITHW/NETBEANS EE/Butler_Java3_MidtermProject/dist/
