Butler_Java3_Lab8_Servlet

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@
 /GITHW/NETBEANS EE/Butler_Java3_MidtermProject/nbproject/private/
 /GITHW/NETBEANS EE/Butler_Java3_MidtermProject/build/
 /GITHW/NETBEANS EE/Butler_Java3_MidtermProject/dist/
+/GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/nbproject/private/
+/GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/build/
+/GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/dist/
