--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,13 @@
 /GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/nbproject/private/
 /GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/build/
 /GITHW/NETBEANS EE/Butler_Java3_Lab8_Servlet/dist/
+/GITHW/NETBEANS EE/testdbproj/nbproject/private/
+/GITHW/NETBEANS EE/testdbproj/build/
+/GITHW/NETBEANS EE/WebServiceLoan/nbproject/private/
+/GITHW/NETBEANS EE/WebServiceLoan/build/
+/GITHW/NETBEANS EE/LoanServiceClient/nbproject/private/
+/GITHW/NETBEANS EE/LoanServiceClient/build/
+/GITHW/NETBEANS EE/LoanWebService/nbproject/private/
+/GITHW/NETBEANS EE/LoanWebService/build/
+/GITHW/NETBEANS EE/LoanServiceProject/nbproject/private/
+/GITHW/NETBEANS EE/LoanServiceProject/build/
